test/Common/LinkerScriptParsing/Errors/Sections/OutputSectionData/ASCIZHexEscapeNotSupported/Inputs/script.t
SECTIONS {
  .rodata : {
    ASCIZ "A\x42"
  }
}
